k8s/vanilla/ecommerce_user/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-user-deployment
  namespace: ecommerce-user-app
  labels:
    app: ecommerce-user-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ecommerce-user-app
  template:
    metadata:
      namespace: ecommerce-user-app
      labels:
        app: ecommerce-user-app
    spec:
      containers:
        - name: ecommerce-user
          image: vinny1892/ecommerce_user:latest
          ports:
            - containerPort: 51051
