k8s/vanilla/ecommerce_user/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ecommerce-app
  namespace: ecommerce-user-app
spec:
  rules:
    - host: app.dev
      http:
        paths:
         - pathType: Prefix
           path: "/"
           backend:
              service:
                name:  service-ecommerce-user-app
                port:
                  number: 5000
